--- a/app.json
+++ b/app.json
@@ -1,12 +1,12 @@
 {
-    "name": "Anya Forger",
+    "name": "❂𝐊𝐚𝐧𝐞𝐤𝐢 ꋊ ɢʜᴏᴜʟ⋆",
     "description": "A Telegram Music Player Bot, written in Python with Pyrogram and Py-Tgcalls.",
-    "logo": "https://telegra.ph/file/da2a329b4b41e770f8353.jpg",
+    "logo": "https://telegra.ph/file/3fa10fd44b51c40f8b487.jpg",
     "keywords": [
     "python3",
     "telegram",
     "bot",
-    "DAXX",
+    "Kaneki",
     "MusicBot",
     "telegram-bot",
     "pyrogram"
